// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<div
  className="sc-bdfBwQ ftYXGo Level horizontal-space-between "
>
  <styled.div />
</div>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<div
  className="sc-bdfBwQ ftYXGo Level horizontal-space-between "
>
  <div
    className="sc-gsTCUz LevelItem  flex-row"
  />
</div>
`;
